# cloverpad-mx-firmware-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
udev/: 99-cloverpad.rules
