[package]
edition = "2021"
name = "cloverpad-mx-firmware-rs"
description = "Firmware for the Cloverpad MX, a 3-key mechanical keypad for osu!"
version = "1.0.0"
license = "GPL-3.0"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0"
rp2040-hal = { version = "0.10", features = [
    "critical-section-impl",
    "rp2040-e5",
    "rt",
    "rtic-monotonic",
] }
rp2040-boot2 = "0.3"

usb-device = "0.3"
usbd-hid = "0.7"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
