[package]
edition = "2021"
name = "cloverpad-mx-firmware-rs"
description = "Firmware for the Cloverpad MX, a 3-key mechanical keypad for osu!"
version = "1.0.1"
license = "GPL-3.0"
publish = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# TODO: rtic-monotonics 2.0 isn't in crates.io yet
# https://github.com/rtic-rs/rtic/issues/921
rtic = { version = "2.1", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2.0", features = ["rp2040"], git = "https://github.com/rtic-rs/rtic.git", rev = "04b655d4faa7b93c8e3838bbad46efb72f5f4570" }

embedded-hal = "1.0"
rp2040-hal = { version = "0.10", features = [
    "critical-section-impl",
    "rp2040-e5",
    "rt",
] }
rp2040-boot2 = "0.3"

usb-device = "0.3"
usbd-hid = "0.7"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
